[gd_scene load_steps=14 format=3 uid="uid://b702l51hth3nx"]

[ext_resource type="Script" path="res://components/dialogue/speech_bubble.gd" id="1_fxg6u"]
[ext_resource type="Texture2D" uid="uid://cgauvvxwji48p" path="res://assets/gui/dialogue/back.svg" id="3_nqtax"]
[ext_resource type="Texture2D" uid="uid://d24d4topiu1gy" path="res://assets/gui/dialogue/play.svg" id="4_jp5iu"]
[ext_resource type="Texture2D" uid="uid://bxog2tu64les2" path="res://assets/gui/dialogue/forward.svg" id="5_bu20x"]
[ext_resource type="Texture2D" uid="uid://c00w5ndd274l6" path="res://assets/gui/dialogue/tail.svg" id="5_kv4yb"]
[ext_resource type="Texture2D" uid="uid://blywqtna3bear" path="res://assets/gui/dialogue/back_pressed.svg" id="5_runxr"]
[ext_resource type="Texture2D" uid="uid://rx8cleegsdag" path="res://assets/gui/dialogue/back_hover.svg" id="5_wr1vt"]
[ext_resource type="FontFile" uid="uid://ch3lmpth87fad" path="res://assets/fonts/Dosis/static/Dosis-Regular.ttf" id="7_ug4kp"]
[ext_resource type="Texture2D" uid="uid://dwjq5ikwsmx7h" path="res://assets/gui/dialogue/play_pressed.svg" id="8_en52a"]
[ext_resource type="Texture2D" uid="uid://beb6xpnyu6e6p" path="res://assets/gui/dialogue/play_hover.svg" id="9_o7wmy"]
[ext_resource type="Texture2D" uid="uid://cqlq1rafvg2ap" path="res://assets/gui/dialogue/forward_pressed.svg" id="11_vqx6y"]
[ext_resource type="Texture2D" uid="uid://b1cv25v3mteuf" path="res://assets/gui/dialogue/forward_hover.svg" id="12_0b8dx"]

[sub_resource type="CanvasTexture" id="CanvasTexture_j6r1q"]

[node name="SpeechBubble" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fxg6u")

[node name="dialogue_container" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = -1.0
offset_top = 1.0
offset_right = 619.0
offset_bottom = 287.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="dialogue_bubble" type="Control" parent="dialogue_container"]
layout_mode = 2

[node name="dialogue_bubble" type="TextureRect" parent="dialogue_container/dialogue_bubble"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
offset_top = -1.0
offset_right = 600.0
offset_bottom = 203.0
texture = SubResource("CanvasTexture_j6r1q")

[node name="tail_cntrl" type="Control" parent="dialogue_container/dialogue_bubble/dialogue_bubble"]
anchors_preset = 0
offset_left = 279.0
offset_top = 193.0
offset_right = 319.0
offset_bottom = 233.0

[node name="tail_sprt" type="Sprite2D" parent="dialogue_container/dialogue_bubble/dialogue_bubble/tail_cntrl"]
texture_filter = 3
position = Vector2(20, 62.625)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_kv4yb")

[node name="dialogue_labels" type="VBoxContainer" parent="dialogue_container/dialogue_bubble"]
layout_mode = 2
offset_right = 600.0
offset_bottom = 204.0

[node name="learning_label" type="Label" parent="dialogue_container/dialogue_bubble/dialogue_labels"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_ug4kp")
theme_override_font_sizes/font_size = 32
text = "Learning Label"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="english_label" type="Label" parent="dialogue_container/dialogue_bubble/dialogue_labels"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_ug4kp")
theme_override_font_sizes/font_size = 24
text = "English Label"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="voiceover" type="AudioStreamPlayer" parent="dialogue_container/dialogue_bubble/dialogue_labels"]
unique_name_in_owner = true

[node name="play_cntrls" type="Control" parent="dialogue_container"]
layout_mode = 2

[node name="play_back_btn" type="TextureButton" parent="dialogue_container/play_cntrls"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
offset_left = -16.0
offset_top = 80.0
offset_right = 518.0
offset_bottom = 614.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.075, 0.075)
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Go back"
texture_normal = ExtResource("3_nqtax")
texture_pressed = ExtResource("5_runxr")
texture_hover = ExtResource("5_wr1vt")

[node name="play_voice_btn" type="TextureButton" parent="dialogue_container/play_cntrls"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
offset_left = 279.0
offset_top = 222.0
offset_right = 821.0
offset_bottom = 764.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.075, 0.075)
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Play"
texture_normal = ExtResource("4_jp5iu")
texture_pressed = ExtResource("8_en52a")
texture_hover = ExtResource("9_o7wmy")

[node name="play_fwd_btn" type="TextureButton" parent="dialogue_container/play_cntrls"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
offset_left = 577.0
offset_top = 80.0
offset_right = 1119.0
offset_bottom = 622.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.075, 0.075)
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Go forward"
texture_normal = ExtResource("5_bu20x")
texture_pressed = ExtResource("11_vqx6y")
texture_hover = ExtResource("12_0b8dx")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="dialogue_container/play_cntrls/play_back_btn" to="." method="_on_play_back_btn_pressed"]
[connection signal="pressed" from="dialogue_container/play_cntrls/play_voice_btn" to="." method="_on_play_voice_btn_pressed"]
[connection signal="pressed" from="dialogue_container/play_cntrls/play_fwd_btn" to="." method="_on_play_fwd_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
